Removed photos button

--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
         
         <!-- BUTTONS --> 
         <div class="col-xs-2 col-md-2">
-            <button type="button" onclick="photos()" class="btn btn-primary">
+            <!--<button type="button" onclick="photos()" class="btn btn-primary">
                 <span class="glyphicon glyphicon-camera" aria-hidden="true"></span> Photos
-            </button>
+            </button>-->
         </div>
 
     </div> <!-- /row -->
