Formatting and organization tweeks; added course project

--- a/index.html
+++ b/index.html
@@ -197,18 +197,20 @@
         <hr>
         <p>
             <b>Languages:</b> Java, C<br>
-            <b>Web Development:</b> HTML, CSS, Bootstrap, JavaScript, Servlets, MyBatis, XML, JSP<br>
+            <b>Web Development:</b> HTML, CSS, Bootstrap, JavaScript, Servlets & JSP, XML<br>
             <b>Tools:</b> Eclipse, Autodesk Fusion 360, Maven, BatGen<br>
-            <b>Databases:</b> SQL
+            <b>Database:</b> SQL, MyBatis<br>
+            <b>Version Control:</b> GitHub, SVN
         </p>
     </div>
     <div id="section4" class="box">
         <h1>Related Experience</h1>
         <hr>
         <p>
-            <b>SimonComputing</b>, Alexandria, VA<br>
-            <i>Intern</i><br>
-            Worked 40 hours per week for 8 weeks (June - July 2016)<br>
+            <h3>SimonComputing</h3>
+            <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> June - July 2016<br>
+            <span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>Alexandria, VA<br>
+            <span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span><i> Intern</i><br>
             <ul>
                 <li> Explored computer and mechanical engineering techniques to build a robotic arm</li>
                 <li> Programmed an arduino to calibrate and safetly ease servo motors in the robotic arm to the correct positions</li>
@@ -217,9 +219,11 @@
             </ul>
             <br>
 
-            <b>SimonComputing</b>, Alexandria, VA<br>
-            <i>Intern</i><br>
-            Worked 40 hours per week for 8 weeks (June - July 2015)<br>
+            <h3>SimonComputing</h3>
+            <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> June - July 2015<br>
+            <span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Alexandria, VA<br>
+            <span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span><i> Intern</i><br>
+            
             <ul>
                 <li> Collaborated with a team of 11 people to design and build an inventory web application</li> 
                 <li> Practiced Agile Development to efficiently build Maven web applications</li>
@@ -229,9 +233,12 @@
             </ul>
             <br>
 
-            <b>Virginia Tech Department of Computer Science</b>, Blacksburg, VA<br>
-            <i>Undergraduate Teacher's Assistant</i><br>
-            Worked 10 hours per week(Spring 2015)<br>
+            <h3>Virginia Tech Department of Computer Science</h3>
+            <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> January - May 2015<br>
+            <span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Blacksburg, VA<br>
+            <span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span><i> Undergraduate Teacher's Assistant</i><br>
+            <span class="glyphicon glyphicon-link" aria-hidden="true"></span> 
+            <u><a href="https://www.youtube.com/channel/UCIdKim1DvvieIDVcBrCG1sg/videos">Tutorial Videos</a></u><br>
             <ul>
                 <li> Designed and revised several homework and lab activities for a Data Structures course</li>
                 <li> Provided constructive feedback on colleague’s work</li>
@@ -245,16 +252,30 @@
         <h1>Course Projects</h1>
         <hr>
         <p>
-            <b>Memory App</b>, Blacksburg, VA<br>
-            Worked with a team of 3 people (Fall 2014)<br>
+            <h3>QueueMe</h3> 
+            <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> February - May 2016<br>
+            <span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Blacksburg, VA<br>
+            <span class="glyphicon glyphicon-user" aria-hidden="true"></span> Worked with a team of 4 people<br>
+            <ul>
+                <li>Designed a mobile app that tracks dining hall traffic with a team of 4 people</li>
+                <li>Collected user data and feedback via interviews, surveys and observation</li>
+                <li>Utilized HCI techniques such as flow diagrams, user personas, storyboards, and wireframes</li>
+            </ul>
+
+            <h3>Memory App</h3
+            <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> September - December 2014<br>
+            <span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Blacksburg, VA<br>
+            <span class="glyphicon glyphicon-user" aria-hidden="true"></span> Worked with a team of 3 people<br>
             <ul>
                 <li> Coordinated with a team of 3 people to design and develop an Android app memory game</li>
                 <li> Maintained detailed, organized debugging notes to communicate coding updates to other teammates</li>
             </ul>
             <br>
 
-            <b>Remote-controlled Door Unlocker</b>, Blacksburg, VA<br>
-            Worked with a team of 6 people (Spring 2014)<br>
+            <h3>Remote-controlled Door Unlocker</h3>
+            <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> February - May 2014<br>
+            <span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Blacksburg, VA<br>
+            <span class="glyphicon glyphicon-user" aria-hidden="true"></span>Worked with a team of 6 people <br>
             <span class="glyphicon glyphicon-link" aria-hidden="true"></span> 
               <u><a href="http://blogs.lt.vt.edu/enge1104l10t1/project-description/">Project Blog</a></u><br>
             <ul>
@@ -267,28 +288,23 @@
         <h1>Activities</h1>
         <hr>
         <p>
-            <b>Virginia Tech Symphony Band</b><br>
-            <i>Flutist</i><br>
+            <b>Virginia Tech Symphony Band</b> &bull; <i>Flutist</i><br>
             Spring 2014 - present<br>
             <br>
 
-            <b>CS Mentoring Club</b><br>
-            <i>Mentor</i><br>
+            <b>CS Mentoring Club</b> &bull; <i>Mentor</i><br>
             Spring 2016<br>
             <br>
 
-            <b>Women in Computing Day</b><br>
-            <i>Volunteer</i><br>
+            <b>Women in Computing Day</b> &bull; <i>Volunteer</i><br>
             April 2016<br>
             <br>
 
-            <b>Computer Science Resources Consortium Career Fair</b><br>
-            <i>Volunteer</i><br>
+            <b>Computer Science Resources Consortium Career Fair</b> &bull; <i>Volunteer</i><br>
             February 2016<br>
             <br>
 
-            <b>Student Engineer's Council Engineering Expo</b><br> 
-            <i>Volunteer</i><br>
+            <b>Student Engineer's Council Engineering Expo</b> &bull; <i>Volunteer</i><br>
             September 2013 and 2015<br>
         </p>
     </div>
