Edited resume text

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <u><a href="https://www.youtube.com/channel/UCIdKim1DvvieIDVcBrCG1sg/videos">Tutorial Videos</a></u><br>
             <ul>
                 <li> Designed and revised several homework and lab activities for a Data Structures course</li>
-                <li> Provided constructive feedback on colleague’s work</li>
+                <li> Provided constructive feedback on colleagues' work</li>
                 <li> Personally created tutorial videos to teach coding and design skills</li>
                 <li> Authored a detailed Java Style Guide as a student reference</li>
             </ul>
@@ -143,12 +143,12 @@
             <span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Blacksburg, VA<br>
             <span class="glyphicon glyphicon-user" aria-hidden="true"></span> Worked with a team of 4 people<br>
             <ul>
-                <li>Designed a mobile app that tracks dining hall traffic with a team of 4 people</li>
+                <li>Designed a mobile app that tracks dining hall traffic</li>
                 <li>Collected user data and feedback via interviews, surveys and observation</li>
                 <li>Utilized HCI techniques such as flow diagrams, user personas, storyboards, and wireframes</li>
             </ul>
 
-            <h3>Memory App</h3
+            <h3>Memory App</h3>
             <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> September - December 2014<br>
             <span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Blacksburg, VA<br>
             <span class="glyphicon glyphicon-user" aria-hidden="true"></span> Worked with a team of 3 people<br>
@@ -165,8 +165,7 @@
             <span class="glyphicon glyphicon-link" aria-hidden="true"></span> 
               <u><a href="http://blogs.lt.vt.edu/enge1104l10t1/project-description/">Project Blog</a></u><br>
             <ul>
-                <li> Programmed an Arduino microcomputer to unlock a door using a Servo motor</li>
-                <li> Combined computer programming skills and electrical engineering applications to program and construct a remote controlled door unlocking unit</li>
+                <li> Programmed an Arduino microcomputer to unlock a door via an IR remote</li>
             </ul>
             <br>
     </div>
@@ -175,23 +174,23 @@
         <hr>
         <p>
             <b>Virginia Tech Symphony Band</b> &bull; <i>Flutist</i><br>
-            Spring 2014 - present<br>
+            <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> January 2014 - present<br>
             <br>
 
             <b>CS Mentoring Club</b> &bull; <i>Mentor</i><br>
-            Spring 2016<br>
+            <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> February - May 2016<br>
             <br>
 
             <b>Women in Computing Day</b> &bull; <i>Volunteer</i><br>
-            April 2016<br>
+            <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> April 2016<br>
             <br>
 
             <b>Computer Science Resources Consortium Career Fair</b> &bull; <i>Volunteer</i><br>
-            February 2016<br>
+            <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> February 2016<br>
             <br>
 
             <b>Student Engineer's Council Engineering Expo</b> &bull; <i>Volunteer</i><br>
-            September 2013 and 2015<br>
+            <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> September 2013 & 2015<br>
         </p>
     </div>
 </div>
